# Clix

./: .gitignore  README.md  backend-user-list.csv  package.json  requirements.txt  tailwind.config.js
app/: models.py  tests.py  urls.py
app/migrations/: 0001_initial.py  0003_architecture.py  0004_architecture_description_architecture_name_and_more.py
app/views/: architecture.py  auth.py
backend/: Pipfile  README.md  settings.py  urls.py
backend/app/: admin.py  utils.py
backend/app/migrations/: 0002_remove_user_experience_level_remove_user_first_name_and_more.py  0005_rename_grid_architecture_viewport.py
backend/app/views/: account.py  app.py  endpoints.py  logic.py  models.py  projects.py  public.py
backend/cli/: views.py
cli/: README.md  apps.py  urls.py
cli/clix_cli/: LICENSE  pyproject.toml
cli/clix_cli/src/ClixDev.egg-info/: PKG-INFO  SOURCES.txt
cli/clix_cli/src/clixdev/: commands.py  terminal.py
cli/clix_cli/src/clixdev/kit/: middleware.py
clix_cli/src/ClixDev.egg-info/: entry_points.txt  top_level.txt
clix_cli/src/clixdev/: trace.py
frontend/: .gitignore  README.md  package-lock.json
frontend/public/: index.html
frontend/src/app/: store.js
frontend/src/components/: Assistant.js  navbar.js  nodeWriter.js  publicFooter.js  publicHeader.js  sidebar.js
frontend/src/js/: prism.js
frontend/src/pages/: Router.js
public/: manifest.json
src/: index.js
src/app/: utils.js
src/app/types/: index.js
src/assets/: ads.css  ads.html
src/components/: BadgeBanner.js  cta.js  loadUp.js
src/styling/: notification.css  tailwind.css
(+81 files in other folders)
